# AI-Boss

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
ai_boss/: main.py
ai_boss/cli/: app.py  commands.py
ai_boss/config/: default_config.yaml  loader.py  writer.py
ai_boss/core/: cli_resolver.py  command_runner.py  errors.py  git_guard.py  orchestrator.py  preflight.py  router.py  runtime.py  task_classifier.py
ai_boss/memory/: obsidian_vault.py  project_store.py  state_store.py  task_files.py
ai_boss/models/: result.py  review.py  task.py  worker.py
ai_boss/prompts/: coder.md  planner.md  reporter.md  reviewer.md
ai_boss/web/: app.py  jobs.py  server.py  ui.py
ai_boss/workers/: base.py  claude_worker.py  codex_worker.py  gemini_worker.py
tests/: test_cli_interactive.py  test_cli_resolver.py  test_config_loader.py  test_config_writer.py  test_git_guard.py  test_obsidian_vault.py  test_orchestrator_project_resolution.py  test_orchestrator_reporter.py  test_projects_preflight.py  test_task_classifier_router.py  test_v2_review_and_history.py  test_web_v2_api.py  test_workers.py
