[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-boss-super-brain"
version = "0.1.0"
description = "Локальный CLI-оркестратор для Gemini, Codex и Claude с памятью в Obsidian."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Sent1nelX" },
]
keywords = ["ai", "cli", "orchestrator", "codex", "gemini", "claude", "obsidian"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.0",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/Sent1nelX/AI-Boss"
Repository = "https://github.com/Sent1nelX/AI-Boss"
Issues = "https://github.com/Sent1nelX/AI-Boss/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ai-boss = "ai_boss.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["ai_boss"]
